Fixed "t" overflowing layout of controls Fixed poster="true" 404, the poster attribute on video tags should be a url to the poster image. I did not know that.

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,13 @@ a:hover {
     font-size:14px;
     
     }
-.nbmenu li { text-align: left; padding: 10px 10px; max-width: 300px; overflow: hidden; }
+
+.nbmenu li {
+  text-align: left;
+  padding: 8px;
+  max-width: 300px;
+  overflow: hidden;
+}
 
 #navboxContents {
     padding: 10px 25px 10px 0;
